--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,7 @@
 }
 .home{
   min-height: 100dvh;
+  height: -webkit-fill-available;
 }
 body{
   background-color: hsl(269, 22%, 55%);
@@ -210,7 +211,8 @@ textarea{
     position: fixed;
     top:0;
     right: 0;
-    height: 90vh;
+    height: 100vh;
+    height: -webkit-fill-available;
     transform: translateX(300px);
     transition: transform 0.3s ease-out;
     &.open{
